# csync

./: .gitignore  :n  Cargo.toml  README.md  build.sh  rustfmt.toml  tmp.txt
src/: clargs.rs  cli.rs  fs_util.rs  hasher.rs  main.rs  rand_util.rs  secure_vec.rs  test_util.rs  tests_e2e.rs  util.rs
src/crypt/: action.rs  crypt_syncer.rs  mod.rs  syncer.rs  util.rs
src/crypt/syncer/: mod.rs  util.rs
src/encoder/: aes.rs  crypt_encoder.rs  hash.rs  hmac.rs  identity.rs  mod.rs  openssl.rs  text.rs  zstd.rs
src/prelude/: consts.rs  csync_err.rs  mod.rs
src/primitives/: file_type.rs  mod.rs  spread_depth.rs
src/specs/: action_spec.rs  authenticator_spec.rs  cipher_spec.rs  compressor_spec.rs  key_deriv_spec.rs  key_deriv_spec_ext.rs  mod.rs  prelude.rs  rehash_spec.rs  syncer_spec.rs  syncer_spec_ext.rs
src/tests_e2e/: fail.rs  mod.rs  success.rs  util.rs
src/tests_e2e/fail/: fresh_builds.rs  incremental_builds.rs  mod.rs
src/tests_e2e/success/: fresh_builds.rs  incremental_builds.rs  mod.rs  util.rs
src/tests_e2e/success/incremental_builds/: deletions.rs  util.rs
tmp_outdir/2/w/2/c5zh4tqlxc5efjqf55qwzyf54lhcnspivg1ahwgspyeij1xytdrhw32aosdyqn24/: guy21r5m5fc3ccbr54rvklcfvhobalvi4kcfwsi_.csync
tmp_src/: fs_util.rs  rand_util.rs
tmp_src/crypt/: action.rs  util.rs
tmp_src/encoder/: crypt_encoder.rs  identity.rs  openssl.rs  zstd.rs
tmp_src/primitives/: mod.rs
tmp_src/specs/: key_deriv_spec_ext.rs  mod.rs  rehash_spec.rs  syncer_spec.rs
tmp_src/tests_e2e/: mod.rs
tmp_src/tests_e2e/success/: fresh_builds.rs  incremental_builds.rs
tmpsrc/: main.rs  test_util.rs  util.rs
tmpsrc/crypt/: action.rs
tmpsrc/crypt/syncer/: mod.rs  util.rs
tmpsrc/prelude/: csync_err.rs
tmpsrc/specs/: syncer_spec_ext.rs
tmpsrc/tests_e2e/: util.rs
tmpsrc/tests_e2e/success/: incremental_builds.rs  others.rs
(+36 files in other folders)
