[package]
name = "csync"
version = "0.1.0"
authors = ["Jack <jchoi5@me.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
# documentation = "https://docs.rs/colmac"
repository = "https://github.com/jchoi5me/crypt-sync"

[dependencies]
colmac = "0.1.1"
data-encoding = "2.1.2"
data-encoding-macro = "0.1.7"
itertools = "0.8"
openssl = "0.10.26"
rand_chacha = "0.2.1"
rayon = "1.1"
ring = "0.16.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
structopt = "0.2"
tempfile = "3"
walkdir = "2"
zstd = "0.4"
