[package]
name = "csync"
version = "0.1.0"
authors = ["Jack <jackwchoi@pm.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackwchoi/csync"

[dependencies]
bincode = "^1.3"
data-encoding = "^2.1"
data-encoding-macro = "^0.1"
isatty = "0.1"
itertools = "^0.8"
memchr = "^2.3"
openssl = "^0.10"
rand_chacha = "^0.2"
rayon = "^1.1"
ring = "^0.16"
scrypt = "^0.3"
secstr = "^0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "^0.3"
tempfile = "3"
termion = "^1.5"
thread-id = "^3.3"
walkdir = "2"
zstd = "^0.4"
zxcvbn = "2"

[dev-dependencies]
colmac = "^0.1"
regex = "1"

# basically [profile.release] with all debug settings `on`
#
# this is because the end-to-end tests run `cargo run` and
# 1. tests run too slowly if `opt-level = 0`
# 1. can't run `cargo run --release` because we want debug settings on
# 1. don't want `[profile.release]` to have debugs on
[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false
